--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -53,7 +53,7 @@
                     その最悪なフィーリング。出口のないトンネルのような日々。 <br>痛いほどよく分かります。
                 </p>
 		    <br>
-		 <h2 class="dh2">なぜなら、ともきんぐ自身がそうだったから。</h2>
+		 <h2 class="dh2">なぜなら、<br>ともきんぐ自身がそうだったから。</h2>
 		 <p class="dnp">
 		高校３年の夏時点で、ともきんぐの校内偏差値は42。まさに「やばい」状態でした。
                      <br>
@@ -71,7 +71,7 @@
             <section>
 		
 		<img src="images/lpchain.png" class="dpics">
-                <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
+                <h2 class="dh2">勉強を継続できないのは、<br><strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
                     実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br>
                     人間は本能的に楽をしたい生き物。
@@ -83,41 +83,41 @@
             </section>
 
             <section>
-                <h2 class="dh2">もう、一人で悩む時間は終わりにしよう。</h2>
-                <h2 class="dh2"><strong>「ともきんぐ式 勉強習慣獲得プログラム」</strong>が、君を変えます。</h2>
+                <h2 class="dh2">一人で悩む時間は終わりにしよう。</h2>
+                <h2 class="dh2"><strong>ともきんぐ式勉強習慣獲得プログラム</strong><br>が、君を変えます。</h2>
                 <img src="images/mainvis.png" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
-                    君の「一人では勉強が続かない悩み」を根本から解決し、<strong>受験を乗り切るための揺るぎない「勉強習慣」</strong>を身につけるためのプログラムを作成しました。
+                    君の「一人では勉強が続かない悩み」を根本から解決し、受験を乗り切るための揺るぎない<strong>勉強習慣</strong>を身につけるためのプログラムを作成しました。
                 </p>
                 <p class="dnp">
-                    「一人じゃ勉強が続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」</strong>に変わるための、科学に基づいた<strong>「仕組み」</strong>と、君の<strong>「伴走者」</strong>がここにいます。
+                    一人じゃ勉強が続かない君が、無理なく、着実に、<strong>毎日コツコツ頑張れる自分</strong>に変わるための、科学に基づいた<strong>「仕組み」</strong>と、君の<strong>「伴走者」</strong>がここにいます。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">迷う時間をなくし、行動を始めるスイッチを入れる<strong>「毎日ミッション」</strong></h2>
+                <h2 class="dh2">迷う時間をなくし、行動自動化する<br><strong>「毎日ミッション」</strong></h2>
                 <img src="placeholder-daily-mission.jpg" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
                 <p class="dnp">
                     「今日、何をすればいいんだろう？」と考える無駄な労力や時間を消し去ります。
                 </p>
                 <p class="dnp">
-                    このプログラムでは、30日間、心理学に基づいたスモールステップで、「今日の君は、これだけやればOK」という具体的な学習ミッションが<strong>毎日</strong>君のLINEに届きます。
+                    このプログラムでは、30日間、心理学に基づいたスモールステップで、「今日の君は、これだけやればOK」という具体的な学習ミッションが<br><strong>毎日</strong>君のLINEに届きます。
                 </p>
                 <ul>
                     <li class="dsli">毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
-                    <li class="dsli">無理なく達成できる設計。小さな成功体験を毎日積み重ねられます。</li>
+                    <li class="dsli">無理なく達成できる設計で、成功体験を毎日積み重ねられます。</li>
                     <li class="dsli">習慣化の土台が自然に作られます。</li>
                 </ul>
                 <p class="dnp">
-                    さらに、ミッションをクリアしたかどうかを毎日LINEでご報告いただきます。この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
+                    さらに、ミッションをクリアしたかどうかを毎日LINEで報告すると、ともきんぐからのフィードバックが届きます。<br>この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">「挫折させない」ともきんぐの個別LINE伴走サポート</h2>
+                <h2 class="dh2">「挫折させない」<br>ともきんぐの個別LINE伴走サポート</h2>
                 <img src="images/feture2.jpg" alt="">
                 <p class="dnp">
-                    このプログラムの最も大切な要素の一つが、私、ともきんぐによるLINEでの個別サポートです。
+                    このプログラムの最も大切な要素の一つが、ともきんぐによるLINEでの個別サポートです。
                 </p>
                 <p class="dnp">
                     <strong>もしミッションが達成できなかった時も、決して君を責めません。</strong>
@@ -126,7 +126,7 @@
                     「なぜ今日は難しかったのか？」「次回は時間やタイミングを変えてみようか？」「この教材の方が取り組みやすいかも？」など、<strong>君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス</strong>します。
                 </p>
                 <ul>
-                    <li class="dsli">君の挫折ポイントを一緒に見つけ、乗り越えるために尽力します。</li>
+                    <li class="dsli">君の挫折ポイントを一緒に見つけ、共に乗り越えます。</li>
                     <li class="dsli">”いつでも相談できる相手がいる”という安心感。</li>
                     <li class="dsli">「見守られている」意識が、継続する力になります。</li>
                 </ul>
@@ -136,7 +136,7 @@
             </section>
 
             <section>
-                <h2 class="dh2">「理解を深め、継続を加速させる」週一の限定動画配信</h2>
+                <h2 class="dh2">「理解を深め、継続を加速させる」<br>週一の限定動画配信</h2>
                 <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
                 <p class="dnp">
                    君の習慣化をさらに加速させ、モチベーションを維持するための<strong>特別な動画</strong>を週に一度、ともきんぐが直接お届けします。
@@ -147,12 +147,12 @@
                     <li class="dsli">受験生の悩みに寄り添った限定コンテンツ。</li>
                 </ul>
                 <p class="dnp">
-                  ともきんぐからの直接的なメッセージが、あなたの継続力を力強く後押しします。
+                  ともきんぐからの直接的なメッセージが、君の継続力を力強く後押しします。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">30日後、<strong>自動的に机に向かう君</strong>へと<strong>進化</strong>します。</h2>
+                <h2 class="dh2">30日後、<br><strong>自動的に机に向かう君</strong>へと<strong>進化</strong>します。</h2>
                 <img src="images/confidence.jpg" class="dpics">
                 <p class="dnp">
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
@@ -179,15 +179,12 @@
                 <dl>
                     <dt class="dsdt">ともきんぐ式 勉強習慣獲得プログラム</dt>
                     <dd></dd>
-                      <br>
 			<br>
                     <dt class="dsdt">実施期間：</dt>
                     <dd>30日間</dd>
-                       <br>
 			<br>
                     <dt class="dsdt">提供形式：</dt>
                     <dd>オンライン（LINE公式アカウントによるコーチング）</dd>
-　　　　　　　　　　　　　<br>
 			<br>
                     <dt class="price-note">価格：</dt>
                     <dd class="price-note"><strong>¥3,000</strong> （追加費用なし）</dd>
@@ -205,16 +202,16 @@
             </section>
 
             <section>
-                <h2 class="dh2">さあ、君の「明日から」を、今度こそ実現させよう</h2>
+                <h2 class="dh2">さあ、君の「明日から」を、<br>今度こそ実現させよう</h2>
                 <img src="images/lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
-                   あなたの本気、ともきんぐが受け止めます。 
+                   君の本気を、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>を手に入れ、<strong>自信を持って受験に臨む未来を掴もう</strong>。
+                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>を手に入れ、<strong>自信を持って受験に臨む未来</strong>を掴もう。
                 </p>
-		<h1 class="dh2">逆転合格への第一歩を、今日、ともきんぐと踏み出そう。</h2>
+		<h1 class="dh2">逆転合格への第一歩を、<br>今日、ともきんぐと踏み出そう。</h2>
                 <a href="https://tomoki0715.github.io/tomoking-yourteacher/howtopay.html" class="cta-button">
                     本プログラムに参加する (¥3,000)
                 </a>
@@ -255,7 +252,7 @@
             <li><a href="https://lin.ee/NMnSBZW"><i class="fab fa-line"></i></a></li>
             <li><a href="https://youtube.com/@tomotomoking?si=-To-MK_6kz3ujxdS"><i class="fab fa-youtube"></i></a></li>
         </ul>
-        <p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
         <p><a href="privacy.html">プライバシーポリシー</a></p>
         <p><a href="transraw.html">特定商取引法に基づく表示</a></p>
         <p><a href="menseki.html">免責事項</a></p>
