--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -209,7 +209,7 @@
                    君の本気を、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>を手に入れ、<strong>自信を持って受験に臨む未来</strong>を掴もう。
+                 全てのミッションをクリアして<strong>毎日コツコツ頑張れる自分</strong>を手に入れ、<br><strong>自信を持って受験に臨む未来</strong>を掴もう。
                 </p>
 		<h1 class="dh2">逆転合格への第一歩を、<br>今日、ともきんぐと踏み出そう。</h2>
                 <a href="https://tomoki0715.github.io/tomoking-yourteacher/howtopay.html" class="cta-button">
