--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -42,8 +42,8 @@
 			受かる未来は見えますか？</h2>
                 <img src="images/lpbed.png" class="dpics">
                 <p class="dnp">
-                    何度「明日こそは」と決意しても、結局三日坊主…<br>
-                    やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
+                    何度「明日こそは」と決意しても、結局三日坊主…<br><br>
+                    やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br><br>
                     周りは頑張ってるのに、自分だけ前に進んでいない感じがする…
                 </p>
                 <p class="dnp">
@@ -54,10 +54,13 @@
                 </p>
 		    <br>
 		 <h2 class="dh2">なぜなら、<br>ともきんぐ自身がそうだったから。</h2>
+		    <br>
 		 <p class="dnp">
-		高校３年の夏時点で、ともきんぐの校内偏差値は42。まさに「やばい」状態でした。
+		高校３年の夏時点で、ともきんぐの校内偏差値は42。<br>まさに「やばい」状態でした。
                      <br>
+			 <br>
 			 「青学に行きたい…」
+			 <br>
 			 <br>
 			 目標だけはデカいのに、毎日１時間すら机に向かえませんでした。
 			 <br>
@@ -73,7 +76,7 @@
 		<img src="images/lpchain.png" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<br><strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
-                    実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br>
+                    実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br><br>
                     人間は本能的に楽をしたい生き物。
                     一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
                 </p>
@@ -109,7 +112,7 @@
                     <li class="dsli">習慣化の土台が自然に作られます。</li>
                 </ul>
                 <p class="dnp">
-                    さらに、ミッションをクリアしたかどうかを毎日LINEで報告すると、ともきんぐからのフィードバックが届きます。<br>この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
+                    さらに、ミッションをクリアしたかどうかを毎日LINEで報告すると、ともきんぐからのフィードバックが届きます。<br><br>この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
                 </p>
             </section>
 
