--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -178,7 +178,7 @@
 
             <section>
                 <h2 class="dh2">プログラム詳細とお申し込み</h2>
-                <img src="placeholder-info-icons.png" alt="カレンダー、LINE、お金のマークなどの情報アイコン" class="dpics">
+                <img src="images/detail.png" alt="カレンダー、LINE、お金のマークなどの情報アイコン" class="dpics">
                 <dl>
                     <dt class="dsdt">ともきんぐ式 勉強習慣獲得プログラム</dt>
                     <dd></dd>
