--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -99,7 +99,7 @@
 
             <section>
                 <h2 class="dh2">迷う時間をなくし、行動自動化する<br><strong>「毎日ミッション」</strong></h2>
-                <img src="placeholder-daily-mission.jpg" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
+                <img src="images/lpsample.png" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
                 <p class="dnp">
                     「今日、何をすればいいんだろう？」と考える無駄な労力や時間を消し去ります。
                 </p>
