--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -31,40 +31,40 @@
         <main>
 <!-- 　　　？？？？	<img src="images/keyv_p1.png" id ="link1"> -->
 		 <section class="main-visual-section">
-                <h1 class="main-catch-phrase">「明日から…」を終わらせよう。</h1>
+                <h1 class="main-catch-phrase">"明日から…"を終わらせよう。</h1>
                 <h2 class="sub-catch-phrase">机に向かえない君を【自動で動かす】<br>30日間の超習慣化プログラム</h2>
                 <p class="impact-statement">偏差値42→難関私立大合格。</p>
-                <p class="tagline">三日坊主だったともきんぐが証明する<br>「頑張らずに勉強が続く」仕組み。</p>
+                <p class="tagline">三日坊主だったともきんぐが証明する<br>"頑張らずに勉強が続く"仕組み。</p>
             </section>
 
             <section>
-                <h2 class="dh2">”机に向かえない”今の自分のままで、<br>
+                <h2 class="dh2">机に向かえない今の自分のままで、<br>
 			受かる未来は見えますか？</h2>
                 <img src="images/lpbed.png" class="dpics">
                 <p class="dnp">
-                    何度「明日こそは」と決意しても、結局三日坊主…<br><br>
+                    何度"明日こそは"と決意しても、結局三日坊主…<br><br>
                     やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br><br>
                     周りは頑張ってるのに、自分だけ前に進んでいない感じがする…
                 </p>
                 <p class="dnp">
-                   「勉強しなきゃ」<br>そう思うほど、スマホを触る手が止まらない。<br>
+                   "勉強しなきゃ"<br>そう思うほど、スマホを触る手が止まらない。<br>
                 </p>
                 <p class="dnp">
-                    その最悪なフィーリング。出口のないトンネルのような日々。 <br>痛いほどよく分かります。
+                    その最悪なフィーリング。<br>出口の無いトンネルのような日々。 <br>痛いほどよく分かります。
                 </p>
 		    <br>
-		 <h2 class="dh2">なぜなら、<br>ともきんぐ自身がそうだったから。</h2>
+		 <h2 class="dh2">なぜなら、<br>僕自身がそうだったから。</h2>
 		    <br>
 		 <p class="dnp">
-		高校３年の夏時点で、ともきんぐの校内偏差値は42。<br>まさに「やばい」状態でした。
+		高校３年の夏時点で、ともきんぐの校内偏差値は42。<br>まさに"やばい"状態でした。
                      <br>
 			 <br>
-			 「青学に行きたい…」
+			 "青学に行きたい…"
 			 <br>
 			 <br>
 			 目標だけはデカいのに、毎日１時間すら机に向かえませんでした。
 			 <br>
-			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。<br>気づけばスマホで時間が溶けていく。
+			 何度も"明日こそは"と誓っては、三日坊主を繰り返す。<br>気づけばスマホで時間が溶けていく。
                 </p>
 		     <p class="dnp">
                    そんなともきんぐが、半年後には<strong>偏差値20UP</strong>、<strong>E判定</strong>から<strong>青学</strong>に<strong>合格</strong>しました。<br>
@@ -76,48 +76,48 @@
 		<img src="images/lpchain.png" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<br><strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
-                    実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br><br>
+                    実は、多くの受験生が"一人で勉強を続ける"ことに苦労しています。<br><br>
                     人間は本能的に楽をしたい生き物。
-                    一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
+                    一人きりだと誘惑に弱くなり、楽な方に流されてしまうのは自然なことです。
                 </p>
                 <p class="dnp">
-                    君に必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、<strong>「君を一人にしない伴走者」</strong>。
+                    君に必要なのは、根性ややる気ではなく、<strong>"毎日やれる仕組み"</strong>と、<strong>"君を一人にしない伴走者"</strong>。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">一人で悩む時間は終わりにしよう。</h2>
-                <h2 class="dh2"><strong>ともきんぐ式勉強習慣獲得プログラム</strong><br>が、君を変えます。</h2>
+                <h2 class="dh2">一人で悩む時間を終わらせよう。</h2>
+                <h2 class="dh2"><strong>勉強習慣獲得30日プログラム</strong>が、君を変えます。</h2>
                 <img src="images/mainvis.png" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
-                    君の「一人では勉強が続かない悩み」を根本から解決し、受験を乗り切るための揺るぎない<strong>勉強習慣</strong>を身につけるためのプログラムを作成しました。
+                    君の"一人では勉強が続かない悩み"を根本から解決し、確実な<strong>勉強習慣</strong>を身につけるためのプログラムを作成しました。
                 </p>
                 <p class="dnp">
-                    一人じゃ勉強が続かない君が、無理なく、着実に、<strong>毎日コツコツ頑張れる自分</strong>に変わるための、科学に基づいた<strong>「仕組み」</strong>と、君の<strong>「伴走者」</strong>がここにいます。
+                    君が無理なく、着実に、<strong>毎日コツコツ頑張れる自分</strong>に変わるための、科学に基づいた<strong>"仕組み"</strong>と、君の<strong>"伴走者"</strong>がここにいます。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">迷う時間をなくし、行動自動化する<br><strong>「毎日ミッション」</strong></h2>
+                <h2 class="dh2">もう迷わない。行動を自動化する<br><strong>"毎日ミッション"</strong></h2>
                 <img src="images/lpsample.png" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
                 <p class="dnp">
-                    「今日、何をすればいいんだろう？」と考える無駄な労力や時間を消し去ります。
+                    "今日、何をすればいいんだろう？"と考える無駄な労力や時間を消し去ります。
                 </p>
                 <p class="dnp">
-                    このプログラムでは、30日間、心理学に基づいたスモールステップで、「今日の君は、これだけやればOK」という具体的な学習ミッションが<br><strong>毎日</strong>君のLINEに届きます。
+                    このプログラムでは、30日間、心理学に基づいたスモールステップで、"今日の君は、これだけやればOK"という具体的な学習ミッションが<strong>毎日</strong>君のLINEに届きます。
                 </p>
                 <ul>
-                    <li class="dsli">毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
+                    <li class="dsli">毎日やることが明確に。迷わずすぐ取りかかれます。</li>
                     <li class="dsli">無理なく達成できる設計で、成功体験を毎日積み重ねられます。</li>
                     <li class="dsli">習慣化の土台が自然に作られます。</li>
                 </ul>
                 <p class="dnp">
-                    さらに、ミッションをクリアしたかどうかを毎日LINEで報告すると、ともきんぐからのフィードバックが届きます。<br><br>この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
+                    さらに、ミッションの達成状況をLINEで報告すると、ともきんぐからのフィードバックが届きます。<br><br>この"報告する"という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと<strong>"やらなきゃ！"</strong>という良い強制力を生み出します。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">「挫折させない」<br>ともきんぐの個別LINE伴走サポート</h2>
+                <h2 class="dh2">"挫折させない"<br>個別LINE伴走サポート</h2>
                 <img src="images/feture2.jpg" alt="">
                 <p class="dnp">
                     このプログラムの最も大切な要素の一つが、ともきんぐによるLINEでの個別サポートです。
@@ -126,12 +126,12 @@
                     <strong>もしミッションが達成できなかった時も、決して君を責めません。</strong>
                 </p>
                 <p class="dnp">
-                    「なぜ今日は難しかったのか？」「次回は時間やタイミングを変えてみようか？」「この教材の方が取り組みやすいかも？」など、<strong>君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス</strong>します。
+                    "なぜ今日は難しかったのか？""次回は時間やタイミングを変えてみようか？""この教材の方が取り組みやすいかも？"など、<strong>君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス</strong>します。
                 </p>
                 <ul>
                     <li class="dsli">君の挫折ポイントを一緒に見つけ、共に乗り越えます。</li>
                     <li class="dsli">”いつでも相談できる相手がいる”という安心感。</li>
-                    <li class="dsli">「見守られている」意識が、継続する力になります。</li>
+                    <li class="dsli">"見守られている"意識が、継続する力になります。</li>
                 </ul>
                 <p class="dnp">
                     勉強内容に関する疑問や、受験に関する不安など、プログラム内容以外の学習相談にも、プログラム期間中であればいつでも対応します。
@@ -139,7 +139,7 @@
             </section>
 
             <section>
-                <h2 class="dh2">「理解を深め、継続を加速させる」<br>週一の限定動画配信</h2>
+                <h2 class="dh2">"理解を深め、モチベ継続"<br>週一の限定動画配信</h2>
                 <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
                 <p class="dnp">
                    君の習慣化をさらに加速させ、モチベーションを維持するための<strong>特別な動画</strong>を週に一度、ともきんぐが直接お届けします。
@@ -161,18 +161,18 @@
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
                 </p>
                 <p class="dnp">
-                    毎日3時間（またはそれ以上）集中して勉強するのが「頑張ること」ではなく、<strong>「まるで呼吸をするかのように当たり前」</strong>になり、勉強への心理的なハードルが驚くほど下がります。
+                    毎日3時間（またはそれ以上）集中して勉強するのが"頑張ること"ではなく、<strong>"まるで呼吸をするかのように当たり前"</strong>になり、勉強への心理的なハードルが驚くほど下がります。
                 </p>
                 <ul>
-                    <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
+                    <li class="dsli">勉強するまでの"めんどくさい"時間が激減。</li>
                     <li class="dsli">計画通りに進められることが、<strong>自分への確かな自信</strong>に。</li>
                     <li class="dsli">毎日、確実に合格へと進む力が身につきます。</li>
-                    <li class="dsli">もう、一人で抱え込み、悩む必要はありません。</li>
+                    <li class="dsli">もう、一人で抱え込み、悩む必要が無くなります。</li>
                 </ul>
 		    <p class="dnp">
-			    受験本番、「やれるだけのことは全てやった」と胸を張って言える。<br>その未来を、今、手に入れませんか？  </p>
+			    受験本番、"やれるだけのことは全てやった"と胸を張って言える。その未来を、今、手に入れませんか？  </p>
                 <p class="dnp">
-                    「やればできる」という成功体験は、勉強だけでなく、これからの人生の大きな力になります。
+                    "やればできる"という成功体験は、勉強だけでなく、これからの人生の大きな力になります。
                 </p>
             </section>
 
@@ -187,7 +187,7 @@
                     <dd>30日間</dd>
 			<br>
                     <dt class="dsdt">提供形式：</dt>
-                    <dd>オンライン（LINE公式アカウントによるコーチング）</dd>
+                    <dd>オンライン（LINE公式アカウント）</dd>
 			<br>
                     <dt class="price-note">価格：</dt>
                     <dd class="price-note"><strong>¥3,000</strong> （追加費用なし）</dd>
@@ -205,14 +205,14 @@
             </section>
 
             <section>
-                <h2 class="dh2">さあ、君の「明日から」を、<br>今度こそ実現させよう</h2>
+                <h2 class="dh2">さあ、君の"明日から"を、<br>今度こそ実現させよう</h2>
                 <img src="images/lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
                    君の本気を、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして<strong>毎日コツコツ頑張れる自分</strong>を手に入れ、<br><strong>自信を持って受験に臨む未来</strong>を掴もう。
+                 全てのミッションをクリアして<strong>毎日コツコツ頑張れる自分</strong>を手に入れ、<strong>自信を持って受験に臨む未来</strong>を掴もう。
                 </p>
 		<h1 class="dh2">逆転合格への第一歩を、<br>今日、ともきんぐと踏み出そう。</h2>
                 <a href="https://tomoki0715.github.io/tomoking-yourteacher/howtopay.html" class="cta-button">
