--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -86,8 +86,8 @@
             </section>
 
             <section>
-                <h2 class="dh2">一人で悩む時間を終わらせよう。</h2>
-                <h2 class="dh2"><strong>勉強習慣獲得30日プログラム</strong>が、君を変えます。</h2>
+                <h2 class="dh2">もう、一人で悩まない。</h2>
+                <h2 class="dh2"><strong>勉強習慣獲得プログラム</strong>が、君を変えます。</h2>
                 <img src="images/mainvis.png" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
                     君の"一人では勉強が続かない悩み"を根本から解決し、確実な<strong>勉強習慣</strong>を身につけるためのプログラムを作成しました。
@@ -98,7 +98,7 @@
             </section>
 
             <section>
-                <h2 class="dh2">もう迷わない。行動を自動化する<br><strong>"毎日ミッション"</strong></h2>
+                <h2 class="dh2">迷わず自動的に行動できる<br><strong>"毎日ミッション"</strong></h2>
                 <img src="images/lpsample.png" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
                 <p class="dnp">
                     "今日、何をすればいいんだろう？"と考える無駄な労力や時間を消し去ります。
@@ -212,7 +212,7 @@
                    君の本気を、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして<strong>毎日コツコツ頑張れる自分</strong>を手に入れ、<strong>自信を持って受験に臨む未来</strong>を掴もう。
+                 全てのミッションをクリアして<strong>毎日コツコツ頑張れる自分</strong>を手に入れ、<strong>自信を持って受験に臨む未来</strong>へ。
                 </p>
 		<h1 class="dh2">逆転合格への第一歩を、<br>今日、ともきんぐと踏み出そう。</h2>
                 <a href="https://tomoki0715.github.io/tomoking-yourteacher/howtopay.html" class="cta-button">
