--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -32,13 +32,13 @@
 <!-- 　　　？？？？	<img src="images/keyv_p1.png" id ="link1"> -->
 		 <section class="main-visual-section">
                 <h1 class="main-catch-phrase">"明日から…"を終わらせよう。</h1>
-                <h2 class="sub-catch-phrase">机に向かえない君を【自動で動かす】<br>30日間の超習慣化プログラム</h2>
+                <h2 class="sub-catch-phrase">机に向かえない君を”自動化”する<br>30日間の超習慣化プログラム</h2>
                 <p class="impact-statement">偏差値42→難関私立大合格。</p>
                 <p class="tagline">三日坊主だったともきんぐが証明する<br>"頑張らずに勉強が続く"仕組み。</p>
             </section>
 
             <section>
-                <h2 class="dh2">机に向かえない今の自分のままで、<br>
+                <h2 class="dh2">継続できない今の自分の先に、<br>
 			受かる未来は見えますか？</h2>
                 <img src="images/lpbed.png" class="dpics">
                 <p class="dnp">
@@ -98,7 +98,7 @@
             </section>
 
             <section>
-                <h2 class="dh2">迷わず自動的に行動できる<br><strong>"毎日ミッション"</strong></h2>
+                <h2 class="dh2">迷わず自動で取り掛かれる<br><strong>"毎日ミッション"</strong></h2>
                 <img src="images/lpsample.png" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
                 <p class="dnp">
                     "今日、何をすればいいんだろう？"と考える無駄な労力や時間を消し去ります。
