--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -87,7 +87,7 @@
 
             <section>
                 <h2 class="dh2">もう、一人で悩まない。</h2>
-                <h2 class="dh2"><strong>勉強習慣獲得プログラム</strong>が、君を変えます。</h2>
+                <h2 class="dh2"><strong>勉強習慣獲得プログラム</strong>が、<br>君を変えます。</h2>
                 <img src="images/mainvis.png" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
                     君の"一人では勉強が続かない悩み"を根本から解決し、確実な<strong>勉強習慣</strong>を身につけるためのプログラムを作成しました。
@@ -155,7 +155,7 @@
             </section>
 
             <section>
-                <h2 class="dh2">30日後、<br><strong>自動的に机に向かう君</strong>へと<strong>進化</strong>します。</h2>
+                <h2 class="dh2">30日後、<br><strong>自動で机に向かう君</strong>がそこに。</h2>
                 <img src="images/confidence.jpg" class="dpics">
                 <p class="dnp">
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
