--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -140,7 +140,7 @@
 
             <section>
                 <h2 class="dh2">"理解を深め、モチベ継続"<br>週一の限定動画配信</h2>
-                <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
+                <img src="images/exmov.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
                 <p class="dnp">
                    君の習慣化をさらに加速させ、モチベーションを維持するための<strong>特別な動画</strong>を週に一度、ともきんぐが直接お届けします。
                 </p>
